--- a/Phase 1 ----Data Collection and  preparation part/readme
+++ b/Phase 1 ----Data Collection and  preparation part/readme
@@ -4,3 +4,6 @@ This file contains the excel sheet of all the data collected from different sour
 3)https://www.wbhealth.gov.in/other_files/2007/14_5.html
 4)https://www.indiaonlinepages.com/population/literacy-rate-in-india.html
 5)https://statistics.py.gov.in/state-wise-population-2010?page=1
+
+
+IT HAVE THE DATA OF ALL THE STATES/UTS i.e. LITERACY RATE AVERAGE,LITERACY RATE MALE, LITERACY RATE FEMALE, POPULATION (MALE AND FEMALE), POPULATION(URABN AND RURAL),AREA(KM2),
